--- a/portfolio-lettering.html
+++ b/portfolio-lettering.html
@@ -168,15 +168,16 @@
         <div class="row justify-content-center">
           <div class="col-md-7">
 
-            <div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+            <div class="footer-site-logo"><a href="#">
+              <img src="images/chico_logo_01.png" alt="Logo Chico" />
+              </a>
+              </div>
 
-            <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
-            </ul>
+              <ul class="footer-site-social">
+                <li><a href="https://www.instagram.com/chicoarnold/" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/arnaldo-m%C3%B3naco-12387810/" target="_blank">LindkedIn</a></li>
+                <li><a href="https://www.behance.net/arnaldomonaco" target="_blank">Behance</a></li>
+              </ul>
 
             <p class="site-copyright">
                 
