--- a/portfolio-squeezecamera.html
+++ b/portfolio-squeezecamera.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Unfold &mdash; A onepage portfolio HTML template by Colorlib</title>
+  <title>Chico &mdash; Arnaldo Monaco | Motion Graphics Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <meta name="description" content=" ">
+  <meta name="description" content="Arnaldo Monaco's Portfolio. A portfolio of motion graphics, 3D modeling and video mapping.">
   <meta name="keywords" content="html, css, javascript, jquery">
-  <meta name="author" content="">
+  <meta name="author" content="Arnaldo Monaco">
 
   <link rel="stylesheet" href="css/vendor/icomoon/style.css">
   <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -41,23 +41,6 @@
 
     <div class="unslate_co--site-inner">
 
-<nav class="unslate_co--site-mobile-menu">
-    <div class="close-wrap d-flex">
-      <a href="#" class="d-flex ml-auto js-menu-toggle">
-        <span class="close-label">Close</span>
-        <div class="close-times">
-          <span class="bar1"></span>
-          <span class="bar2"></span>
-        </div>
-      </a>
-    </div>
-    <div class="site-mobile-inner"></div>
-  </nav>
-
-  <div class="unslate_co--site-wrap">
-
-    <div class="unslate_co--site-inner">
-
       <nav class="unslate_co--site-nav site-nav-target">
 
         <div class="container">
@@ -72,8 +55,9 @@
               </ul>
             </div>
             <div class="site-logo pos-absolute">
+              <a href="index.html">
               <img src="images/chico_logo_01.png" alt="Logo Chico" />
-              <a href="index.html" class="unslate_co--site-logo">
+            </a>
             </div>
             <div class="col-md-5 text-right text-lg-left">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
@@ -85,6 +69,7 @@
                 <li><a href="#" class="js-menu-toggle">Menu</a></li>
               </ul>
 
+
             </div>
           </div>
         </div>
@@ -93,11 +78,11 @@
       <!-- END nav -->
 
       <div class="cover-v1 gradient-bottom-black jarallax">
-        <!--<div class="container">
+       <!--<div class="container">
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Shoe Rebranding</h1>
+              <h1 class="heading" data-aos="fade-up">Reworking</h1>
               <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the countries.</h2>
             </div>
 
@@ -117,64 +102,49 @@
 
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
-
           <div class="portfolio-single-inner">
-            <h2 class="mr-auto heading-h2">Betwarrior</h2>
 
-            <div class="row justify-content-between mb-5">
-              <div class="col-12 mb-4">
-                <div class="owl-carousel single-slider">
-                  <figure class="mb-4">
-                    <img src="images/work/work_1_a_full.png" alt="Image" class="img-fluid">
-                  </figure>
-                  <figure class="mb-4">
-                    <img src="images/work/work_1_b_full.png" alt="Image" class="img-fluid">
-                  </figure>
-                  <figure class="mb-4">
-                    <img src="images/work/work_1_c_full.png" alt="Image" class="img-fluid">
-                  </figure>
-                  <figure class="mb-4">
-                    <img src="images/work/work_1_d_full.png" alt="Image" class="img-fluid">
-                  </figure>
-                  <figure class="mb-4">
-                    <img src="images/work/work_1_e_full.png" alt="Image" class="img-fluid">
-                  </figure>
-                </div>
+            <h2 class="mr-auto heading-h2"></h2>
+
+            <div class="row justify-content-between align-items-stretch">
+
+              <div class="col-lg-8">
+                <p><a href="images/work/work_5_a_full.png" data-fancybox="gal"><img src="images/work/work_2_a_full.png" alt="Squeeze Camera modeling" class="img-fluid"></a></p>
+                <p><a href="images/work/work_5_b_full.png" data-fancybox="gal"><img src="images/work/work_2_b_full.png" alt="Squeeze Camera modeling" class="img-fluid"></a></p>
+                <p><a href="images/work/work_5_c_full.png" data-fancybox="gal"><img src="images/work/work_2_c_full.png" alt="Squeeze Camera modelinge" class="img-fluid"></a></p>
+                <p><a href="images/work/work_5_d_full.png" data-fancybox="gal"><img src="images/work/work_2_d_full.png" alt="Squeeze Camera 3D modeling" class="img-fluid"></a></p>
               </div>
-              <div class="col-12 mb-5">
-                <div class="row">
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
+              <div class="col-lg-4 pl-lg-5">
+                <div class="unslate_co--sticky">
+                  <div class="row">
+
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Project Description</span>
+                        <p>Personal work. Creating shape and concept.</p>
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Role</span>
+                        <span class="detail-val"><a href="#">3D Modeling</a></span>
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Project Date</span>
+                        <span class="detail-val">2020</span>
+                      </div>
+                    </div>
+
+                      </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Role</span>
-                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Client</span>
-                      <span class="detail-val">unslate</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="#">https:///</a></span>
-                    </div>
-                  </div>
-                </div>
+                </div> 
               </div>
-              <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              </div>
-              <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              </div>
+
             </div>
 
           </div>
@@ -187,15 +157,16 @@
         <div class="row justify-content-center">
           <div class="col-md-7">
 
-            <div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+              <div class="footer-site-logo"><a href="#">
+              <img src="images/chico_logo_01.png" alt="Logo Chico" />
+              </a>
+              </div>
 
-            <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
-            </ul>
+              <ul class="footer-site-social">
+                <li><a href="https://www.instagram.com/chicoarnold/" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/arnaldo-m%C3%B3naco-12387810/" target="_blank">LindkedIn</a></li>
+                <li><a href="https://www.behance.net/arnaldomonaco" target="_blank">Behance</a></li>
+              </ul>
 
             <p class="site-copyright">
                 
