--- a/portfolio-landscape.html
+++ b/portfolio-landscape.html
@@ -120,7 +120,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
 
           <div class="portfolio-single-inner">
-            <h2 class="mr-auto heading-h2"></h2>
+            <h2 class="mr-auto heading-h2">Landscape</h2>
 
             <div class="row justify-content-between mb-5">
               <div class="col-12 mb-4">
