--- a/portfolio-sasquatch.html
+++ b/portfolio-sasquatch.html
@@ -104,7 +104,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="mr-auto heading-h2"></h2>
+            <h2 class="mr-auto heading-h2">Sasquatch</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
