--- a/portfolio-lettering.html
+++ b/portfolio-lettering.html
@@ -150,7 +150,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Role</span>
-                      <span class="detail-val"> <a href="#">3D Modeling</a></span>
+                      <span class="detail-val"> <a href="3DModeling">3D Modeling</a></span>
                     </div>
                   </div>
                 </div>
