--- a/portfolio-squeezecamera.html
+++ b/portfolio-squeezecamera.html
@@ -128,7 +128,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">3D Modeling</a></span>
+                        <span class="detail-val"><a href="3DModeling">3D Modeling</a></span>
                       </div>
                     </div>
 
