--- a/portfolio-landscape.html
+++ b/portfolio-landscape.html
@@ -126,10 +126,10 @@
               <div class="col-12 mb-4">
                 <div class="owl-carousel single-slider">
                   <figure class="mb-4">
-                    <img src="images/work/work_6_a_full.png" alt="Image" class="img-fluid">
+                    <img src="images/work/work_6_b_full.png" alt="Image" class="img-fluid">
                   </figure>
                   <figure class="mb-4">
-                    <img src="images/work/work_6_b_full.png" alt="Image" class="img-fluid">
+                    <img src="images/work/work_6_a_full.png" alt="Image" class="img-fluid">
                   </figure>
                   
                 </div>
@@ -150,7 +150,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Role</span>
-                      <span class="detail-val"> <a href="3DModeling">3D Modeling</a></span>
+                      <span class="detail-val"> <a href="index.html#portfolio-section">3D Modeling</a></span>
                     </div>
                   </div>
                 </div>
