--- a/portfolio-sasquatch.html
+++ b/portfolio-sasquatch.html
@@ -109,9 +109,9 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work/work_1_a_full.png" data-fancybox="gal"><img src="images/work/work_4_a_full.png" alt="Betwarrior 3D modeling" class="img-fluid"></a></p>
-                <p><a href="images/work/work_1_b_full.png" data-fancybox="gal"><img src="images/work/work_4_b_full.png" alt="Betwarrior 3D modeling" class="img-fluid"></a></p>
-                <p><a href="images/work/work_1_c_full.png" data-fancybox="gal"><img src="images/work/work_4_c_full.png" alt="Betwarrior 3D modelinge" class="img-fluid"></a></p>
+                <p><a href="images/work/work_4_a_full.png" data-fancybox="gal"><img src="images/work/work_4_a_full.png" alt="Betwarrior 3D modeling" class="img-fluid"></a></p>
+                <p><a href="images/work/work_4_b_full.png" data-fancybox="gal"><img src="images/work/work_4_b_full.png" alt="Betwarrior 3D modeling" class="img-fluid"></a></p>
+                <p><a href="images/work/work_4_c_full.png" data-fancybox="gal"><img src="images/work/work_4_c_full.png" alt="Betwarrior 3D modelinge" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
@@ -127,7 +127,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="3DModeling">3D Modeling</a></span>
+                        <span class="detail-val"><a href="index.html#portfolio-section">3D Modeling</a></span>
                       </div>
                     </div>
 
