--- a/portfolio-betwarrior.html
+++ b/portfolio-betwarrior.html
@@ -129,7 +129,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#portfolio-section">3D Modeling</a></span>
+                        <span class="detail-val">3D Modeling</span>
                       </div>
                     </div>
 
