--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg_3.png');id="home-section">
         <div class="container">
           <div class="d-flex align-items-center mb-4">
-            <img src="images/cover_bg_3.png" class="lazyload  img-fluid" alt="Images"/>
+            <!--<img src="images/cover_bg_3.png" class="lazyload  img-fluid" alt="Images"/>-->
           </div>          
           </div>
         </div>
@@ -146,10 +146,10 @@
               
               <div class="filter-wrap">
                 <div class="filter ml-auto" id="filters">
-                  <a href="#" class="active" data-filter="*">All</a>
-                  <a href="#" data-filter=".MotionGraphics">Motion Graphics</a>
-                  <a href="#" data-filter=".3DModeling">3D Modeling</a>
-                  <a href="#" data-filter=".VideoMapping">Video Mapping</a>
+                  <a href="*" class="active" data-filter="*">All</a>
+                  <a href=".MotionGraphics" data-filter=".MotionGraphics">Motion Graphics</a>
+                  <a href=".3DModeling" data-filter=".3DModeling">3D Modeling</a>
+                  <a href=".VideoMapping" data-filter=".VideoMapping">Video Mapping</a>
                 </div>
               </div>
             </div>
